--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "box-office",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dhruv5gohel.github.io/BoxOffice",
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
